# readiness-rms

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  UPSTREAM.md  install.ps1  install.sh  layman.md  pyproject.toml
cognis_mil/: cli.py
demos/: SCENARIO.md  unit-1234.json  unit-5678.json
docs/: INSTALL.md
examples/: help.txt  version.txt
readiness_rms/: __init__.py  __main__.py  cli.py  connect.py  core.py
tests/: test_connect.py  test_hardening.py  test_smoke.py
