[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-readiness-rms"
version = "0.1.1"
description = "Unit-readiness C-rating dashboard (C1-C4) — personnel, equipment, training"
license = { text = "LicenseRef-COCL-1.0" }
requires-python = ">=3.10"
authors = [{name="Cognis Digital", email="suite@cognis.digital"}]
readme = "README.md"
keywords = ["military","ic","dod","cognis-digital","readiness-rms"]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
"readiness-rms-emit" = "readiness_rms.connect:emit_main"
readiness-rms = "readiness_rms.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["readiness_rms", "cognis_mil"]

[tool.hatch.metadata]
allow-direct-references = true
